# DragonHack-2026

./: .editorconfig  .gitignore  README.md  package-lock.json  package.json
.test-artifacts/1a9201cf-bed4-4e72-8568-4b3dd86c00fb/records/: oakproof-session-1.json
additional_materials/: app.py
additional_materials/static/: style.css
additional_materials/templates/: index.html  random memorize.txt
backend/: .env.example  README.md  pyproject.toml
backend/.test-artifacts/908f46e4-e692-4c3b-bfda-b2791cdf1836/records/: oakproof-session-1.json
backend/app/: __init__.py  config.py  main.py  models.py  repository.py
backend/app/services/: flare_anchor.py  receipts.py  transaction_proofs.py
backend/tests/: test_transaction_proofs.py
capture/: .env.example  README.md  pyproject.toml  requirements.txt
capture/.test-artifacts/37fbec6d-289c-4297-a88c-61bcc10a41d6/captures/20260419/37cbe576-2bf8-4024-8b6e-3747fd7da8b4/: proof.json
capture/.test-artifacts/5dd57878-95ab-4237-916e-1c39b1f73e16/captures/20260419/62be07cd-14f4-4767-adfe-8d2c66a69586/: proof.json
capture/app/: __init__.py  config.py  depth_challenge.py  depthai_client.py  main.py  models.py  oak4_engine.py  oak4_rgbd_viewer.py  preview.py  receipt_workflow.py  service.py  session_runtime.py  signing.py  storage.py
capture/config/: anti_replay_thresholds.json
capture/tests/: test_capture_api.py  test_depth_challenge.py
contracts/: .env.example  README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: OAKProofAnchor.sol
contracts/scripts/: deploy.ts
contracts/test/: OAKProofAnchor.ts
docs/: architecture.md  demo.md  environment.md  tasks.md
scripts/: demo.ps1
verifier/: .env.example  README.md  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
verifier/src/: App.tsx  styles.css  types.ts
(+9 files in other folders)
